codegen/ui_tests/rhai_fn_rename_collision_with_itself.stderr
error: duplicate Rhai signature for 'foo'
  --> ui_tests/rhai_fn_rename_collision_with_itself.rs:12:15
   |
12 |     #[rhai_fn(name = "foo", name = "bar", name = "foo")]
   |               ^^^^

error: duplicated function renamed 'foo'
  --> ui_tests/rhai_fn_rename_collision_with_itself.rs:12:15
   |
12 |     #[rhai_fn(name = "foo", name = "bar", name = "foo")]
   |               ^^^^
